# TinyHotkeyTool

./: CMakeLists.txt  LICENSE  README.md  README_original.md  TaskList.md  setting.ini  shortcut.cpp
